# llm_blogscraper

./: .gitignore  main.py  pyproject.toml  requirements.txt  tags.txt
src/phase0_webscrape_preprocess/: article_chunking.py  json_create.py  tag_addition.py  webscrape.py
src/phase1_search/: search_text.py
