[project]
name = "jerx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "html2text>=2025.4.15",
    "lxml>=6.0.2",
    "markdown>=3.9",
    "requests>=2.32.5",
    "selenium>=4.36.0",
    "tqdm>=4.67.1",
]
